--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "main": "./src/index.js",
   "dependencies": {
+    "@antv/f2": "4.0.27",
+    "@antv/f2-react": "4.0.27",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "13.5.0",
