--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "1.3.4",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-sizeme": "3.0.2",
